# NSEIT-CODE-MIGRATION

./: .env  .gitignore  README.md  template.ps1  template.py
.gemini/: system.md
.state/: AI-HORIZON.md
Code-Migration/: main.py  pyproject.toml
Code-Migration/src/tools/: DiffOptions.py  EditFile.py  GlobSearch.py  GrepSearch.py  ListDirectory.py  ReadFile.py  RepGrep.py  SaveMemory.py  ShellTool.py  SmartEdit.py  WriteFile.py
IIIRegistrationPortal/: .project  README.md  pom.xml
aih/analysis/: 2025-09-18_Analysis_LoginUserManagement.md
aih/worklogs/: 2025-09-17_Worklog_FoundationSetup.md  2025-09-18_Worklog_LoginModuleDebugging.md
dotnet_source_code/iiiexams.org/IIIBL/: IIIBL.csproj
dotnet_source_code/iiiexams.org/IIIRegistrationPortal2/: IIIRegistrationPortal2.csproj  Web.config  packages.config
prompts/: task_prompt.md
reference_java_application_source_code/: context.xml  server.xml
reference_java_application_source_code/MRBPCW/WebContent/: contact-us.jsp  instructions.jsp  instructions2.jsp  nomobile.jsp  style.css  style2.css
reference_java_application_source_code/MRBPCW/resource/: application-context.xml
reference_java_application_source_code/MRBPCW/src/: SpringBeans.xml  global.properties  global_es.properties  log4j2.xml  (+3 more)
reference_java_application_source_code/POSTGRESS-DUMP/: mrb_pcw2025.backup
research/: DoubtsQueries.md  memory_20250912_175034.md
research/project_analysis/: DetailedMigrationPlanbyTask.md  DivideAndConquer.md  DotNetProjectAnalysis.md  Reference-Application-Analysis.md  UpdatesRequired.md
scripts/: buildNdeploy.bat
(+717 files in other folders)
