[project]
name = "code-migration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogen-agentchat>=0.5.7",
    "autogen-core>=0.5.7",
    "autogen-ext[azure,openai]>=0.5.7",
    "autogenstudio>=0.4.2.2",
    "ripgrep>=14.1.0",
]
